--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -24,7 +24,7 @@
       <!-- Right Aligned -->
       <ul class="navbar-nav my-lg-0">
         <!-- Messages -->
-        <!--<li><app-messages-menu></app-messages-menu></li>-->
+        <li><app-messages-menu></app-messages-menu></li>
         <!-- Notifications -->
         <!--<li><app-notifications></app-notifications></li>-->
         <!-- Profile -->
