--- a/src/app/components/sharedComponents/messages/messages-menu.component.html
+++ b/src/app/components/sharedComponents/messages/messages-menu.component.html
@@ -13,40 +13,19 @@
           <div  *ngFor="let m of messages">
             <!-- Message -->
             <a [routerLink]="[ '/studentmain', { outlets: { content: 'chat' } } ]" [queryParams]="{ chat: m | json }">
+              <!-- Contact user profile picture -->
               <div class="user-img"> <img src="images/users/default-profile.png" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
+              <!-- Message content -->
               <div class="mail-contnet">
+                <!-- Contact name -->
                 <h5>{{m.contact.name}} {{m.contact.lastname}}</h5>
+                <!-- Message text -->
                 <span class="mail-desc">{{m.messages[0].text | slice:0:40}}</span>
+                <!-- Date sent -->
                 <span class="time">{{m.messages[0].date | date}}</span>
               </div>
             </a>
           </div>
-           <!--this is hardcoded -->
-          <!--<a [routerLink]="[ '/studentmain', { outlets: { content: 'chat' } }]">-->
-              <!--<div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>-->
-              <!--<div class="mail-contnet">-->
-                <!--<h5>Sergio</h5>-->
-                <!--<span class="mail-desc">Te estas colgando</span>-->
-                <!--<span class="time"></span>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!--<a href="#">-->
-              <!--<div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>-->
-              <!--<div class="mail-contnet">-->
-                <!--<h5>Julia</h5>-->
-                <!--<span class="mail-desc">...</span>-->
-                <!--<span class="time"></span>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!--<a href="#">-->
-              <!--<div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>-->
-              <!--<div class="mail-contnet">-->
-                <!--<h5>Anfitrion</h5>-->
-                <!--<span class="mail-desc">Recuerda tu cita el lunes</span>-->
-                <!--<span class="time"></span>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!-- -->
         </div>
       </li>
       <li>
