--- a/src/app/components/sharedComponents/messages/messages-menu.component.html
+++ b/src/app/components/sharedComponents/messages/messages-menu.component.html
@@ -20,9 +20,9 @@
                 <!-- Contact name -->
                 <h5>{{m.contact.name}} {{m.contact.lastname}}</h5>
                 <!-- Message text -->
-                <span class="mail-desc">{{m.messages[0].text | slice:0:40}}</span>
+                <span class="mail-desc">{{m.messages[m.messages.length-1].text | slice:0:40}}</span>
                 <!-- Date sent -->
-                <span class="time">{{m.messages[0].date | date}}</span>
+                <span class="time">{{m.messages[m.messages.length-1].date | date}}</span>
               </div>
             </a>
           </div>
