fixed bug with grades

--- a/src/app/components/all-chats/all-chats.component.html
+++ b/src/app/components/all-chats/all-chats.component.html
@@ -1,3 +1,7 @@
-<p>
-  all-chats works!
-</p>
+<div class="container card chat-container">
+  <div *ngFor="let c of chats">
+    <mat-card>
+
+    </mat-card>
+  </div>
+</div>
