--- a/src/app/components/comment-button/msg-input.html
+++ b/src/app/components/comment-button/msg-input.html
@@ -1,7 +1,7 @@
 <h3 mat-dialog-title="">Leave a comment for </h3>
 
 <div class="form-group">
-  <input type="textarea" class="form-control" [(ngModel)]="data.msg" name="msg">
+  <input type="textarea" class="form-control" [(ngModel)]="data.text" name="text">
 </div>
 
 <div mat-dialog-actions>
