--- a/src/app/components/mentorsPage/student-detail/student-detail.component.html
+++ b/src/app/components/mentorsPage/student-detail/student-detail.component.html
@@ -1,3 +1,5 @@
+<!--<p>this does not work!</p>-->
+
 <!-- Student name -->
 <h1 class="name">{{student.name}} {{student.lastname}}</h1>
 
@@ -5,10 +7,14 @@
 <mat-card>
   <div class="row">
     <div class="col-sm-12">
+      <h5>Faculty</h5>
+      <div>{{student.faculty_name}}</div><br/>
       <h5>Department</h5>
-      <div>{{student.department_name}}</div><br/>
+      <div>{{student.program_name}}</div><br/>
       <h5>Email Address</h5>
       <div>{{student.email}}</div><br/>
+      <h5>Phone Number</h5>
+      <div>{{student.phone_num | phone}}</div><br/>
     </div>
   </div>
 </mat-card>
@@ -20,7 +26,7 @@
   <div class="col-sm-4">
   <h2>Courses</h2>
   <app-student-courses-table [courseSelectDisabled]="true"></app-student-courses-table>
-  <app-comment-button></app-comment-button>
+  <a mat-fab (click)="comment()"><mat-icon>comment</mat-icon></a>
   </div>
 <!--</mat-card>-->
 
@@ -28,7 +34,7 @@
 <!--<mat-card class="col-sm-5 offset-1">-->
   <div class="col-sm-4">
   <app-time-management-pie-chart></app-time-management-pie-chart>
-  <app-comment-button></app-comment-button>
+  <a mat-fab (click)="comment()"><mat-icon>comment</mat-icon></a>
   </div>
   </div>
 </mat-card>
@@ -38,18 +44,18 @@
 <mat-card class="col-sm-4">
   <h2>GPA</h2>
   <app-grade-gauge></app-grade-gauge>
-  <app-comment-button></app-comment-button>
+  <a mat-fab (click)="comment()"><mat-icon>comment</mat-icon></a>
 </mat-card>
 
 <!-- Calendar with student's schedule-mbsc-viejo -->
 <mat-card class="col-sm-8">
   <h2>Schedule</h2>
   <mbsc-eventcalendar showOnFocus="true"></mbsc-eventcalendar>
-  <app-comment-button></app-comment-button>
+  <a mat-fab (click)="comment()"><mat-icon>comment</mat-icon></a>
 </mat-card>
 
 <!-- Goals -->
 <mat-card>
   <h2>Goals</h2>
-  <app-comment-button></app-comment-button>
+  <a mat-fab (click)="comment()"><mat-icon>comment</mat-icon></a>
 </mat-card>
