--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,4 +1,6 @@
 .mat-card{
-    margin-bottom: 10px;
-    margin-right: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
