--- a/src/app/components/studentPages/course-detail/course-detail.component.html
+++ b/src/app/components/studentPages/course-detail/course-detail.component.html
@@ -49,7 +49,8 @@
             <!-- Columns -->
             <tbody>
               <ng-container *ngFor="let g of course.grades">
-                <!-- If editing current grade -->
+
+                <!-- For a grade who is being edited, input field will appear -->
                 <tr *ngIf="editable==g">
                   <!-- Name -->
                   <td scope="row">
@@ -60,6 +61,7 @@
                   <!-- Date -->
                   <td>
                     <mat-form-field>
+                      <!-- todo: check por que no coge el date (i have a feeling que es el formato) -->
                       <input #date matInput  [matDatepicker]="picker" [value]="g.date">
                       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                       <mat-datepicker #picker disabled="false"></mat-datepicker>
@@ -88,7 +90,7 @@
                   </td>
                 </tr>
 
-                <!-- If grade is not editable -->
+                <!-- If grade is not editable, show only data -->
                 <tr *ngIf="editable!=g">
                   <!-- Name -->
                   <th scope="row">{{g.name}}</th>
@@ -100,9 +102,9 @@
                   <td>{{g.grade}} / {{g.total}}</td>
                   <!-- Action buttons -->
                   <td class="action-buttons">
-                    <!-- Edit grade -->
+                    <!-- Button to edit grade -->
                     <button mat-icon-button (click)="editable=g"><mat-icon>create</mat-icon></button>
-                    <!-- Delete grade -->
+                    <!-- Button to delete grade -->
                     <button mat-icon-button (click)="deleteGrade(g.grade_id)"><mat-icon>clear</mat-icon></button>
                   </td>
                 </tr>
